log/build_2023-11-06_13-52-08/manos_manager/stderr.log
  File "/home/keny/MANOS_ws/install/manos_manager/lib/python3.8/site-packages/manos_manager/manos_manager.py", line 3
    from src.custom_ros_controller.custom_ros_controller.turtle_sim_controller import TurtleSimControl.
                                                                                                      ^
SyntaxError: invalid syntax

